// Package server implements the HTTP handlers for the marketplace API
package server

import (
	"marketplace/proto"
	"net/http"
)

// Common error responses
var (
	errNotImplemented = &proto.ErrorResponse{
		Code:    proto.ErrorCode_ERROR_NOT_IMPLEMENTED,
		Message: "This functionality is not implemented yet",
	}
)

func (s *Server) HandleListItems(r *http.Request, req *proto.ListItemsRequest) (*proto.ListItemsResponse, *proto.ErrorResponse, int) {
	if req == nil {
		return nil, &proto.ErrorResponse{
			Code:    proto.ErrorCode_ERROR_INVALID_REQUEST,
			Message: "Request body cannot be empty",
		}, http.StatusBadRequest
	}

	// TODO: Implement actual item listing logic with pagination and filtering
	return nil, errNotImplemented, http.StatusNotImplemented
}

func (s *Server) HandleCreateItem(r *http.Request, req *proto.CreateItemRequest) (*proto.CreateItemResponse, *proto.ErrorResponse, int) {
	if req == nil {
		return nil, &proto.ErrorResponse{
			Code:    proto.ErrorCode_ERROR_INVALID_REQUEST,
			Message: "Request body cannot be empty",
		}, http.StatusBadRequest
	}

	// TODO: Implement actual item creation logic with validation
	return nil, errNotImplemented, http.StatusNotImplemented
}
